[QFEED-91] Feature: Group 상세정보 조회 기능 구현