@@ -1,44 +1,34 @@
 package com.wsws.moduleapi.group.dto;
 
 import com.wsws.moduleapplication.group.dto.GroupDetailServiceResponse;
-import com.wsws.moduleapplication.group.dto.GroupServiceResponse;
+import com.wsws.moduleapplication.group.dto.GroupMemberServiceResponse;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record GroupDetailApiResponse(
         Long groupId,
-        Long categoryId,
+        String categoryName,
         String url,
         String groupName,
         String description,
         String adminId,
         LocalDateTime createdAt,
-        List<MemberApiResponse> members
+        List<GroupMemberApiResponse> members
 ) {
-    public record MemberApiResponse(
-            String memberId,
-            String memberNickname,
-            String memberProfile
-    ) {
-    }
-
     public GroupDetailApiResponse(GroupDetailServiceResponse serviceResponse) {
         this(
                 serviceResponse.groupId(),
-                serviceResponse.categoryId(),
+                serviceResponse.categoryName(),
                 serviceResponse.url(),
                 serviceResponse.groupName(),
                 serviceResponse.description(),
                 serviceResponse.adminId(),
                 serviceResponse.createdAt(),
-                serviceResponse.members().stream()
-                        .map(member -> new MemberApiResponse(
-                                member.memberId(),
-                                member.memberNickname(),
-                                member.memberProfile()
-                        ))
-                        .toList()
+                serviceResponse.members().stream() // GroupMemberServiceResponse ->GroupMemberApiResponse
+                        .map(GroupMemberApiResponse::new)
+                        .collect(Collectors.toList())
         );
     }
 }
